<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/lbl_add_favorite"
        android:id="@+id/addFav"
        android:icon="@drawable/ic_heart"
        />
    <item android:title="@string/lbl_remove_favorite"
        android:id="@+id/remFav"
        android:icon="@drawable/ic_heart_red"
        />
    <item android:title="@string/lbl_add_to_queue"
        android:id="@+id/addQueue"
        android:icon="@drawable/ic_add"
        />
    <item android:title="@string/lbl_goto_series"
        android:id="@+id/gotoSeries"
        android:icon="@drawable/ic_tv"
        />
    <item android:title="@string/lbl_delete"
        android:id="@+id/delete"
        android:icon="@drawable/ic_trash"
        />

</menu>