<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_menu_back">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/lbl_filters"
        android:layout_marginTop="10sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="10sp"
        android:showDividers="middle"
        android:divider="@drawable/blank10x10">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_filter"
            android:id="@+id/okButton"
            android:textColor="@android:color/white"
            android:background="@drawable/jellyfin_button"
            android:minWidth="100dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear_all"
            android:textColor="@android:color/white"
            android:background="@drawable/jellyfin_button"
            android:minWidth="100dp"
            android:id="@+id/clearButton" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_movies"
        android:id="@+id/movies"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="35sp"
        android:layout_alignLeft="@+id/premiere" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_series"
        android:id="@+id/series"
        android:layout_below="@+id/movies"
        android:layout_alignLeft="@+id/premiere" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_news"
        android:id="@+id/news"
        android:layout_below="@+id/series"
        android:layout_alignLeft="@+id/premiere" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_kids"
        android:id="@+id/kids"
        android:layout_below="@+id/news"
        android:layout_alignLeft="@+id/premiere" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_sports"
        android:id="@+id/sports"
        android:layout_below="@+id/kids"
        android:layout_alignLeft="@+id/premiere" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_new_only"
        android:id="@+id/premiere"
        android:layout_below="@+id/sports"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp" />
</RelativeLayout>
